Adjust header padding to fix gap between header and breadcrumb

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -147,7 +147,7 @@
     }
   }
   @mixin atMinWidthToHideMenuIcon {
-    padding: 12px 0;
+    padding: 12.5px 0;
   }
 
   &__logo {
